<?xml version="1.0"?>
<package format="2">
  <name>frobs_rl</name>
  <version>0.0.3</version>
  <description>Flexible Robotics Reinforcement learning library.</description>

  <author email="jmfajardod@unal.edu.co">Jose Fajardo</author>
  <maintainer email="jmfajardod@unal.edu.co">Jose Fajardo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>

  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export></export>

</package>
